--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,10 @@
   the License.
   -->
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="pink_100">#FFFFF1F1</color>
+    <color name="pink_900">#FF3F2C2C</color>
+    <color name="green_900">#FF2D3B2D</color>
+    <color name="green_300">#FFB8C9B8</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
